--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "bootstrap": "",
     "flux": "^2.0.1",
+    "formsy-react": "^0.7.0",
     "keymirror": "~0.1.0",
     "object-assign": "^1.0.0",
     "react": "^0.12.0"
@@ -35,4 +36,3 @@
     "rootDir": "./js"
   }
 }
-
